--- a/Dockerfile.local
+++ b/Dockerfile.local
@@ -13,8 +13,6 @@ WORKDIR /app
 RUN python -m venv /opt/venv
 ENV PATH="/opt/venv/bin:$PATH"
 # Credentials needed to access packages
-ARG PIP_EXTRA_INDEX_URL
-ENV PIP_EXTRA_INDEX_URL=$PIP_EXTRA_INDEX_URL
 # The URL for the home page (this page redirects to the install's HOWSO_UI_URL)
 ENV HOWSO_HOME_URL="/howso.html"
 # Install the requirements
@@ -36,7 +34,6 @@ WORKDIR /build
 COPY Makefile ./
 COPY source ./source
 COPY examples ./examples
-COPY examples-howso.yml ./examples/howso.yml
 # Build docs
 RUN make html
 
@@ -58,7 +55,7 @@ RUN chmod +x /container_files/bin/*.sh
 RUN cp /container_files/templates/default.conf /etc/nginx/conf.d/default.conf
 RUN cp /container_files/templates/nginx.conf /etc/nginx/nginx.conf
 # Copy the built static sphinx documentation from the build containers
-COPY --from=doc-builder /app/build/html /usr/share/nginx/html
+COPY --from=doc-builder /build/build/html /usr/share/nginx/html
 # Fix up the readthedocs specific links - to work in the container
 RUN /container_files/bin/setup_container.sh
 EXPOSE 8080
