--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -1,8 +1,8 @@
 name: Build and Deploy Sphinx Docs
 
 on:
-  workflow_dispatch
-		branches
+  workflow_dispatch:
+		branches:
 			-  17394-gh-pages
 
 jobs:
