--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -29,6 +29,9 @@ jobs:
         run: |
           make html
 
+      - name: Create CNAME
+        run: echo 'docs.howso.com' > ./build/html/CNAME
+
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
