--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -15,9 +15,9 @@ jobs:
           submodules: 'recursive'  # Checkout submodules
 
       - name: Set up Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
-          python-version: '3.x'
+          python-version: "3.11"
 
       - name: Install Dependencies
         run: pip install -r requirements-3.11.txt
