--- a/requirements.in
+++ b/requirements.in
@@ -7,7 +7,7 @@ sphinx-copybutton>=0.5,<0.6
 sphinx-gallery>=0.12,<0.13
 sphinx-design>=0.4.1,<0.5
 sphinx~=6.0
-sphinxcontrib-images~=0.0,<1.0
+sphinxcontrib-images~=0.0
 pydata-sphinx-theme>=0.13.3,<0.14
 # Misc dependencies
 matplotlib
