--- a/requirements.in
+++ b/requirements.in
@@ -2,12 +2,12 @@
 howso-engine
 # Sphinx dependencies
 jinja2
-myst-parser>=1.0,<2
+myst-parser~=1.0
 sphinx-copybutton>=0.5,<0.6
 sphinx-gallery>=0.12,<0.13
 sphinx-design>=0.4.1,<0.5
-sphinx>=6.1,<7
-sphinxcontrib-images>=0.9.4,<1.0
+sphinx~=6.0
+sphinxcontrib-images~=0.0
 pydata-sphinx-theme>=0.13.3,<0.14
 # Misc dependencies
 matplotlib
