--- a/requirements.in
+++ b/requirements.in
@@ -2,12 +2,11 @@
 howso-engine[scikit]
 # Sphinx dependencies
 jinja2
-myst-parser~=1.0
+myst-parser~=2.0
 sphinx-copybutton>=0.5,<0.6
 sphinx-gallery>=0.12,<0.13
-sphinx-design>=0.4.1,<0.5
-sphinx~=6.0
-sphinxcontrib-images~=0.0
+sphinx-design~=0.0
+sphinx
 pydata-sphinx-theme>=0.13.3,<0.14
 sphinx-autodoc-typehints~=2.0
 scanpydoc~=0.0
