--- a/requirements.in
+++ b/requirements.in
@@ -3,13 +3,14 @@ howso-engine[scikit]
 # Sphinx dependencies
 jinja2
 myst-parser~=2.0
-sphinx-copybutton>=0.5,<0.6
-sphinx-gallery>=0.12,<0.13
-sphinx-design~=0.0
-sphinx
 pydata-sphinx-theme>=0.13.3,<0.14
-sphinx-autodoc-typehints~=2.0
 scanpydoc~=0.0
+sphinx
+sphinx-autodoc-typehints~=2.0
+sphinx-copybutton>=0.5,<0.6
+sphinx-design~=0.0
+sphinx-gallery>=0.12,<0.13
+sphinxcontrib-images~=0.0
 # Misc dependencies
 matplotlib
 seaborn
