--- a/requirements.in
+++ b/requirements.in
@@ -1,14 +1,15 @@
 # Howso packages are needed only to generate documentation
-howso-engine
+howso-engine[scikit]
 # Sphinx dependencies
 jinja2
-myst-parser~=1.0
-sphinx-copybutton>=0.5,<0.6
-sphinx-gallery>=0.12,<0.13
-sphinx-design>=0.4.1,<0.5
-sphinx~=6.0
-sphinxcontrib-images~=0.0
+myst-parser~=2.0
 pydata-sphinx-theme>=0.13.3,<0.14
+sphinx
+sphinx-autodoc-typehints~=2.0
+sphinx-copybutton>=0.5,<0.6
+sphinx-design~=0.0
+sphinx-gallery>=0.12,<0.13
+sphinxcontrib-images~=0.0
 # Misc dependencies
 matplotlib
 seaborn
