--- a/requirements.in
+++ b/requirements.in
@@ -9,7 +9,7 @@ sphinx-autodoc-typehints~=2.0
 sphinx-copybutton>=0.5,<0.6
 sphinx-design~=0.0
 sphinx-gallery>=0.12,<0.13
-sphinx-reredirects>=0.1.3
+sphinx-reredirects~=0.1
 sphinxcontrib-images~=0.0
 # Misc dependencies
 matplotlib
