--- a/.github/workflows/build-pr.yml
+++ b/.github/workflows/build-pr.yml
@@ -23,15 +23,7 @@ jobs:
       upstream-packages: 'amalgam-lang-py howso-engine-py'
       extras: ''
 
-  build:
-    needs: ['gen-requirements']
-    uses: "./.github/workflows/build.yml"
-    secrets: inherit
-    with:
-      build-type: "PR"
-
   xray:
-    needs: ['build']
     uses: "howsoai/.github/.github/workflows/scan-pull-request.yml@main"
     secrets: inherit
     with:
@@ -40,7 +32,7 @@ jobs:
   # This job is here to have only one final step to add for "Status Checks"
   # in GitHub, instead of adding every leaf test from 'build-test-package'
   final-check:
-    needs: ['build', 'gen-requirements', 'xray']
+    needs: ['gen-requirements', 'xray']
     if: always() && (contains(needs.*.result, 'failure') || contains(needs.*.result, 'cancelled'))
     runs-on: ubuntu-latest
     steps:
