--- a/requirements.in
+++ b/requirements.in
@@ -1,6 +1,7 @@
 # Howso packages are needed only to generate documentation
 howso-engine[scikit]
 # Sphinx dependencies
+setuptools~=81.0.0
 jinja2
 myst-parser~=2.0
 pydata-sphinx-theme>=0.13.3,<0.14
